# src/routes/user.routes.js
@@ -1,36 +1,12 @@
 const { Router } = require('express') 
 const router = Router()
 const { requireLogin } = require('../middlewares/requireLogin')
-const User = require('../models/User')
+const userCtrl = require('../controllers/user.controller')
 
-router.get('/', requireLogin, async (req, res) => {
-    try {
-        const user = await User.findOne({_id: req.user.id}).select('-pass')
-        return res.status(200).json({ok: true, user})
-    } catch (error) {
-        console.log(error)
-    }
-})
+router.get('/', requireLogin, userCtrl.getCurrentUser)
 
-router.put('/', requireLogin, async (req, res) => {
-    try {
-        let _user = await User.findByIdAndUpdate(req.user.id, req.body)
-        if (!_user) return res.status(400).json({ok: false, msg: 'error'})
-        
-        _user = await User.findOne({_id: req.user.id}).select('-pass')
-        return res.status(200).json({ok: true, data: _user})
-    } catch (error) {
-        console.log(error)
-    }
-})
+router.put('/', requireLogin, userCtrl.updateUser)
 
-router.get('/getallusers', async (req, res) => {
-    try {
-        const users = await User.find().select('-pass')
-        return res.status(200).json({ok: true, users})
-    } catch (error) {
-        console.log(error)
-    }
-})
+router.get('/getallusers', userCtrl.getAllUsers)
 
 module.exports = router
